# GodotHub

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  ErrorBoundary.tsx  WorkspaceSwitcher.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  changelog.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: categories.rs  changelog.rs  git.rs  godot_versions.rs  lib.rs  main.rs  models.rs  news.rs  projects.rs  scan.rs  settings.rs  templates.rs  watcher.rs  workspace.rs
src/components/: Icons.tsx  OnboardingTips.tsx  SplashScreen.tsx  TaskTray.tsx  Titlebar.tsx  ViewErrorBoundary.tsx
src/components/git/: DiffViewer.tsx  GitResultDialog.tsx  GitSidebar.tsx  MergeConflictDialog.tsx
src/components/modals/: BugReportModal.tsx  CategoryManagerModal.tsx  ChangelogEntryModal.tsx  CheckForUpdatesModal.tsx  CloneRepoModal.tsx  CommandPalette.tsx  ConfirmDialog.tsx  CreateProjectModal.tsx  CreateWorkspaceModal.tsx  LaunchArgsModal.tsx  (+4 more)
src/hooks/: categoriesContext.tsx  godotVersionsContext.tsx  projectsContext.tsx  useCategories.ts  useChangelog.ts  useGodotVersions.ts  useKeyboardShortcuts.ts  useNews.ts  useProjects.ts  useSettings.ts  useTaskTray.tsx  useWorkspaces.ts
src/lib/: api.ts  appearance.ts  colors.ts  lastOpened.ts  projectSort.ts  workspaceIcons.ts
src/views/: ChangelogView.tsx  NewsView.tsx  OnboardingView.tsx  ProjectsView.tsx  SettingsView.tsx  TemplatesView.tsx  VersionsView.tsx
(+11 files in other folders)
